k8/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frobarn-ingress
  namespace: dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: dev.frobarn.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dev-frobarn-svc
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frobarn-ingress
  namespace: test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: test.frobarn.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: test-frobarn-svc
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frobarn-ingress
  namespace: prod
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: frobarn.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prod-frobarn-svc
            port:
              number: 80
